k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus
          resources:
            requests:
              memory: "256Mi" # Minimum memory request
              cpu: "250m" # Minimum CPU request
            limits:
              memory: "512Mi" # Maximum memory limit
              cpu: "500m" # Maximum CPU limit
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
      restartPolicy: Always
