k8s/nginx-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prometheus-exporter
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-prometheus-exporter
  template:
    metadata:
      labels:
        app: nginx-prometheus-exporter
    spec:
      containers:
        - name: nginx-prometheus-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - "-nginx.scrape-uri=http://web/status"
          ports:
            - containerPort: 9113
          resources:
            requests:
              memory: "128Mi" # Minimum memory request
              cpu: "100m" # Minimum CPU request
            limits:
              memory: "256Mi" # Maximum memory limit
              cpu: "200m" # Maximum CPU limit
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus-exporter
  namespace: web
spec:
  ports:
    - port: 9113
      targetPort: 9113
  selector:
    app: nginx-prometheus-exporter
