k8s/opensearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: web
spec:
  replicas: 1 # Set the number of replicas
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: adriencalt/opensearch-custom-prometheus-exporter:2.17.1
          ports:
            - containerPort: 9200
            - containerPort: 9600
          resources:
            requests:
              memory: "1Gi" # Minimum memory request
              cpu: "250m" # Minimum CPU request
            limits:
              memory: "2Gi" # Maximum memory limit
              cpu: "500m" # Maximum CPU limit
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: web
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: dashboard
      port: 9600
      targetPort: 9600
  selector:
    app: opensearch
